--- a/package.json
+++ b/package.json
@@ -3,18 +3,40 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.11.56",
-    "@types/react": "^18.0.18",
-    "@types/react-dom": "^18.0.6",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.8.2",
-    "web-vitals": "^2.1.4"
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/data-grid": "^4.0.0-alpha.37",
+    "@material-ui/icons": "^4.11.3",
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.10.1",
+    "@mui/styles": "^5.9.3",
+    "@mui/x-data-grid": "^4.0.1",
+    "@reduxjs/toolkit": "^1.8.5",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
+    "@testing-library/user-event": "^12.8.3",
+    "@types/jest": "^26.0.24",
+    "@types/node": "^12.20.33",
+    "@types/react": "^17.0.30",
+    "@types/react-dom": "^17.0.9",
+    "@types/react-router-dom": "^5.3.3",
+    "axios": "^0.27.2",
+    "bootstrap": "^5.1.1",
+    "firebase": "^8.10.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-bootstrap": "^1.6.4",
+    "react-hook-form": "^7.34.2",
+    "react-redux": "^7.2.8",
+    "react-router-dom": "^5.3.0",
+    "react-scripts": "^5.0.1",
+    "react-tap-event-plugin": "^2.0.1",
+    "reactfire": "^3.0.0",
+    "tslib": "^2.4.0",
+    "typescript": "^4.4.4",
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
